--- a/templates/index.html
+++ b/templates/index.html
@@ -149,6 +149,9 @@ We are a team of five college students from the University of Huntsville in Alab
 		EVENTS={{ events|safe }};
 		IMAGES={{ images|safe }};
 
+		console.log(EVENTS);
+		console.log(IMAGES);
+
 		function init_events( events ){
             var contentString = [];
 			for(var i =0; i < events.length;i++){
