--- a/templates/index.html
+++ b/templates/index.html
@@ -177,6 +177,7 @@ We are a team of five college students from the University of Huntsville in Alab
 		}
 
 		function init_images( images ){
+			console.log( images );
             var contentString = [];
 			for(var i =0; i < images.length;i++){
 				var image = images[i];
