--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,8 @@ We are a team of five college students from the University of Huntsville in Alab
             </div>
             <div id="smsPrep" class="displayNone">
                 <h4>SMS Messaging Instructions:</h3>
-                <h4 >Text This Number: <span style="text-decoration:underline; color: red;">(256)361-1265</span></h4>
+                <h4 >Text This Number:</h4>
+				<h4><span style="text-decoration:underline; color:red; width:100%;text-align:center;">(256)361-1265</span></h4>
 <p>Two options are available for receiving a threat level via SMS messaging. Sending a message with content other than numbers (or no content) will return the calculated threat level for your geographic location. A message sent in the format lat, lon will return the calculated threat level for those precise coordinates. The threat level is calculated from the NASA Global Landslide Nowcast combined with socioeconomic data and user submitted reports. Threat levels are as follows:</p>
     <ul>
 <li><b>0-1 Low:</b> Little or no landslide risk, no action necessary</li>
