--- a/templates/index.html
+++ b/templates/index.html
@@ -99,10 +99,10 @@
 We are a team of five college students from the University of Huntsville in Alabama and Case Western Reserve University in Cleveland. Our backgrounds range from mechanical engineering to art animation to computer science. We are passionate about many things including Python, web development, and hard problems in general. Despite officially meeting all together for the first time on Saturday morning of the NASA Space Apps Challenge, we bonded quickly over the 36-hour sprint to make SLIDE. As a team, we have been able to utilize our different backgrounds in order to create an application that we not only take great pride in, but that can actively improve the world by democratizing access to information.
 
 <h4>Contact Info</h4><br>
-<b>SMS Notification Number</b> 256-361-1265<br>
-<b>Email account</b> earthalertspace@gmail.com<br>
-<a href="https://goo.gl/BMV4Cn">YouTube Account</a>
-<a href="https://goo.gl/WIdi0F">Twitter</a>
+<b>SMS Notification Number</b> 256-361-1265<br/>
+<b>Email account</b> earthalertspace@gmail.com<br/>
+<a href="https://goo.gl/BMV4Cn">YouTube Account</a><br/>
+<a href="https://goo.gl/WIdi0F">Twitter</a><br/>
                 <p></p>
             </div>
             <div id="smsPrep" class="displayNone">
